# libserial

./: .dir-locals.el  .editorconfig  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  Demo.cc  demo.cc  main.cc
include/: Serial.ccm  serial.ccm
src/: CMakeLists.txt  Serial.cc  serial.cc
test/: CMakeLists.txt  UnitTests.cc
